--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,6 +1,7 @@
 .Synonyms {
-  margin: 5px 0 0;
+  margin: 5px 0 15px;
   padding: 0;
+  line-height: 11px;
 }
 
 .Synonyms li {
